# datasette-insecure-users

./: Justfile  pyproject.toml
datasette_insecure_users/: __init__.py  schema.sql
datasette_insecure_users/templates/: login.html
tests/: test_insecure_users.py
